# hillshade

./: .dockerignore  .gitignore  CMakeLists.txt  docker-compose.yml  makefile  readme.md  vcpkg.json
.docker/: Convert.dockerfile
.github/: pull_request_template.md
.github/workflows/: build.yml
audio/recordings/v1/: v1-directional-lighting-1.m4a  v1-final-product-0.m4a  v1-law-of-cosines-1.m4a  v1-motivation-1.m4a  v1-simplicity-0.m4a
code/: CMakeLists.txt
code/src/: CMakeLists.txt
code/src/hillshade/: CMakeLists.txt
code/src/hillshade/cpp/hillshade/: application.cpp  main.cpp  mesh.cpp  terrain.cpp
code/src/hillshade/include/private/hillshade/: application.h  application.hpp  mesh.hpp  terrain.h  terrain.hpp
code/src/hillshade/shaders/: hillshade.psh  hillshade.vsh  structures.fxh
code/src/hillshader/: CMakeLists.txt
code/src/hillshader/cpp/hillshade/: application.cpp  main.cpp  terrain.cpp
code/src/hillshader/cpp/hillshader/: application.cpp  main.cpp  mesh.cpp  terrain.cpp  timer.cpp
code/src/hillshader/cpp/hillshader/camera/: controller.cpp
code/src/hillshader/cpp/hillshader/camera/constrainers/: collide.cpp
code/src/hillshader/cpp/hillshader/camera/constraints/: collide.cpp
code/src/hillshader/cpp/hillshader/camera/controllers/: controller.cpp  input.cpp
code/src/hillshader/cpp/hillshader/camera/controllers/animators/: animator.cpp  orbit.cpp  orbit_attract.cpp  path.cpp  zoom.cpp
code/src/hillshader/cpp/hillshader/camera/controllers/reactors/: input.cpp
code/src/hillshader/cpp/hillshader/camera/physics/: free_body.cpp  handler.cpp  orbit.cpp
code/src/hillshader/include/private/hillshade/: application.hpp  mesh.hpp  terrain.hpp
code/src/hillshader/include/private/hillshader/: application.hpp  mesh.hpp  terrain.hpp  timer.hpp
code/src/hillshader/include/private/hillshader/camera/: config.hpp  controller.hpp
code/src/hillshader/include/private/hillshader/camera/animators/: identity.hpp
code/src/hillshader/include/private/hillshader/camera/constrainers/: collide.hpp
code/src/hillshader/include/private/hillshader/camera/controllers/: controller.hpp  identity.hpp  input.hpp
code/src/hillshader/include/private/hillshader/camera/controllers/animators/: animator.hpp  orbit.hpp  orbit_attract.hpp  path.hpp  zoom.hpp
code/src/hillshader/include/private/hillshader/camera/controllers/reactors/: input.hpp
code/src/hillshader/include/private/hillshader/camera/physics/: free_body.hpp  handler.hpp  orbit.hpp
code/src/hillshader/shaders/: hillshade.psh
converter/: convert.py  requirements.txt
manimations/: config.py  derivation.py  directional_lighting.py  final_product.py  fractal_shader.glsl  hillshading.py  intro.py  logo.py  main.py  watch_and_render.py
manimations/assets/audio/recordings/v1/: cosine-0.m4a  cosine-1.m4a  directional-lighting-2.m4a  hillshading-0.m4a  law-of-cosines-0.m4a  law-of-cosines-2.m4a  modifications-0.m4a  pseudoscopic-illusion-0.m4a  v1-cosine-2.m4a  v1-directional-lighting-0.m4a  v1-endnotes-0.m4a  v1-motivation-0.m4a
manimations/assets/audio/recordings/v2/: Assumptions.m4a  DesiredBehavior.m4a  EffectGraph.m4a  Endnotes.m4a  FinalProduct.m4a  LawOfCosines.m4a  Motivation.m4a  ShadowArea.m4a  Simplicity.m4a  Topic.m4a  TransformCosine.m4a  WhatIsLink.m4a
script/: script.tex
transform/: convert.py  cut.py
